# whatsmybitrate

./: .gitignore  README.md  pyproject.toml  requirements.txt  whatsmybitrate.py  wmb_core.py
whatsmybitrate_report_20250809_162821_ptdwph/: whatsmybitrate_report_20250809_162821_ptdwph.csv
whatsmybitrate_report_20250809_170053_z6rkd0/: whatsmybitrate_report_20250809_170053_z6rkd0.csv
